Fixed style collapse and added some more tests

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -62,3 +62,6 @@
 
 .summary
   display: inline-block
+
+.custom-min-width
+  min-width: 433px
